fix(lc): lc create alignment issue in mobile devices

--- a/src/modules/Dashboard/modules/LearningCircleV2/pages/CreateLC/CreateLC.module.css
+++ b/src/modules/Dashboard/modules/LearningCircleV2/pages/CreateLC/CreateLC.module.css
@@ -88,6 +88,12 @@
             }
             .form {
                 padding: 10px;
+                .formGroup {
+                    &.radioContainer {
+                        flex-direction: column !important;
+                        justify-content: center;
+                    }
+                }
             }
         }
     }
